kerdesek alap designja

--- a/Hajos/wwwroot/kerdesek.html
+++ b/Hajos/wwwroot/kerdesek.html
@@ -4,8 +4,28 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="script/hajos.js"></script>
+    <link href="hajos.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="eredmeny"></div>
+    <div id="külső">
+        <div id="kérdés_szöveg">
+            Kérdés szövege
+        </div>
+
+        <div id="középső">
+            <div id="válaszok">
+                <div id="válasz1" class="kerdes">Válasz 1</div>
+                <div id="válasz2" class="kerdes">Válasz 2</div>
+                <div id="válasz3" class="kerdes">Válasz 3</div>
+            </div>
+            <div id="kép">
+                <img id="kép1" src="https://kzgzdiag426.blob.core.windows.net/netcore/teszt-0050.jpg" />
+            </div>
+        </div>
+        <div id="vezérlő">
+            <div class="gomb kattintható">Vissza</div>
+            <div class="gomb kattintható">Előre</div>
+        </div>
+    </div>
 </body>
 </html>
