mar kiirja a kerdeset

--- a/Hajos/wwwroot/kerdesek.html
+++ b/Hajos/wwwroot/kerdesek.html
@@ -1,16 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title></title>
-    <script src="script/hajos.js"></script>
+    <script src="script/HajosKerdes.js"></script>
     <link href="hajos.css" rel="stylesheet" />
 </head>
 <body>
     <div id="külső">
-        <div id="kérdés_szöveg">
-            Kérdés szövege
-        </div>
+        <div id="kérdés_szöveg">Kérdés szövege</div>
 
         <div id="középső">
             <div id="válaszok">
